# ml-classification-playground

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-check.yml
configs/: baseline.yaml
data/: README.md  sample_iot_windows.csv
docs/: experiment-log.md  fa-notes.md  paper-connection.md
notebooks/: 01_baseline_classification.ipynb
scripts/: run_baseline.py
src/ml_playground/: __init__.py  data.py  evaluate.py  features.py  models.py  train_baselines.py
tests/: test_smoke.py
