[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-classification-playground"
version = "0.1.0"
description = "Small classification experiments connected to an IoT/Windows ML paper project."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Mohammadali Mousavireineh" }
]

[tool.setuptools.packages.find]
where = ["src"]
